--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="background">#C3F0EA</color>
     <color name="textBackground">#DAF0C1</color>
     <color name="colorAccents">#D81B60</color>
+    <color name="coloryellow">#F5F3DA07</color>
 </resources>
