--- a/app/src/main/res/layout/activity_list__orders.xml
+++ b/app/src/main/res/layout/activity_list__orders.xml
@@ -6,18 +6,15 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".List_Orders">
 
-    <ListView
-        android:id="@+id/fbListview"
-        android:layout_marginTop="100dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+<!--    <ListView-->
+<!--        android:id="@+id/fbListview"-->
+<!--        android:layout_marginTop="100dp"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        />-->
 
-<!--
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HELLO"/>
+
+
 <androidx.recyclerview.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,5 +24,5 @@ tools:context=".List_Orders">
 
 </androidx.recyclerview.widget.RecyclerView>
 
--->
+
 </RelativeLayout>
