--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -22,13 +22,12 @@
         android:id="@+id/ItemID"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:background="@drawable/edit_corner"
-        android:paddingLeft="10dp"
+        android:layout_below="@id/select_product_image"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/select_product_image"
         android:layout_marginTop="50dp"
+        android:background="@drawable/edit_corner"
         android:hint="@string/hint4"
-        />
+        android:paddingLeft="10dp" />
     <EditText
         android:id="@+id/name"
         android:layout_width="300dp"
