--- a/app/src/main/res/layout/order_row.xml
+++ b/app/src/main/res/layout/order_row.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    app:cardCornerRadius="12dp"
+    app:cardCornerRadius="30dp"
     android:elevation="90dp"
     android:layout_margin="7dp">
 <ScrollView
@@ -14,13 +14,13 @@
         android:layout_width="match_parent"
         android:layout_height="260dp"
         android:orientation="vertical"
-        android:background="#CAE4E7">
+        android:background="#6A006FFF">
 
 
-        <!--<RelativeLayout
+        <RelativeLayout
             android:id="@+id/relative1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">-->
+            android:layout_height="wrap_content">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,24 +29,26 @@
             android:textStyle="bold"
             android:textSize="18dp"
             android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/txtValue1"/>
 
         <EditText
             android:id="@+id/editTextOrderID"
-            android:layout_width="250dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="120dp"
+            android:layout_marginLeft="170dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:hint="Order Id" />
-       <!-- </RelativeLayout>-->
+       </RelativeLayout>
 
 
 
-       <!-- <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp">-->
+       <RelativeLayout
+           android:id="@+id/relative2"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_marginBottom="10dp">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -54,36 +56,49 @@
             android:textColor="#090909"
             android:textStyle="bold"
             android:textSize="18dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/txtValue2"/>
 
         <EditText
             android:id="@+id/editTextCusNIC"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="150dp"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="170dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:hint="Nic" />
-        <!--</RelativeLayout>-->
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relative3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/cusName"
             android:textColor="#090909"
             android:textStyle="bold"
+            android:layout_marginLeft="5dp"
             android:textSize="18dp"
             android:text="@string/txtValue3"/>
 
 
         <EditText
             android:id="@+id/editTextCusName"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginLeft="170dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:hint="Name" />
 
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relative4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -91,17 +106,26 @@
             android:textColor="#090909"
             android:textStyle="bold"
             android:textSize="18dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/txtValue6"/>
 
 
         <EditText
             android:id="@+id/editTextAddress"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginLeft="170dp"
+
             android:ems="10"
             android:inputType="textPersonName"
             android:hint="Address" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relative5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="match_parent"
@@ -110,16 +134,24 @@
             android:textColor="#090909"
             android:textStyle="bold"
             android:textSize="18dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/txtValue4"/>
 
         <EditText
             android:id="@+id/editTextDelID"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginLeft="170dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:hint="Delivery Id " />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relative6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="match_parent"
@@ -128,29 +160,31 @@
             android:textColor="#090909"
             android:textStyle="bold"
             android:textSize="18dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/txtValue5"/>
 
         <EditText
             android:id="@+id/editTextStatus"
-            android:layout_width="match_parent"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginLeft="170dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:hint="Ststus " />
 
+        </RelativeLayout>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/btn6"
-            android:textStyle="bold"
-            android:background="@color/coloraddbutton"
             android:layout_marginLeft="150dp"
-            android:layout_marginTop="20dp"
-            />
+            android:layout_marginTop="10dp"
+            android:background="@drawable/buttonupdate"
+            android:onClick="UpdateOrderStatus"
+            android:text="@string/btn6"
+            android:textStyle="bold" />
 
 
 
     </LinearLayout>
 </ScrollView>
-</LinearLayout>
+</androidx.cardview.widget.CardView>
