--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -26,7 +26,7 @@
         android:layout_below="@id/ItemID"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:background="@drawable/button_corner"
+        android:background="@drawable/searchbutton"
         android:text="@string/btn10" />
 
 
@@ -39,7 +39,7 @@
         android:layout_below="@+id/btnSearch"
         android:layout_marginTop="20dp"/>
 
-    <EditText
+    <TextView
         android:id="@+id/IdItem"
         android:layout_width="300dp"
         android:layout_height="40dp"
@@ -48,7 +48,8 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/btnSearch"
         android:layout_marginTop="150dp"
-        android:hint="@string/hint1"
+        android:hint="Prodcut ID"
+        android:textSize="15dp"
         /><!--android:text="@string/fruit6"-->
 
     <EditText
@@ -60,7 +61,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/IdItem"
         android:layout_marginTop="10dp"
-        android:hint="@string/hint1"
+        android:hint="Product Name"
         /><!--android:text="@string/fruit6"-->
 
     <EditText
@@ -72,7 +73,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/name"
         android:layout_marginTop="10dp"
-        android:hint="@string/hint2"
+        android:hint="Product Price"
         /><!--android:text="@string/price3"-->
 
     <EditText
@@ -84,7 +85,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/price"
         android:layout_marginTop="10dp"
-        android:hint="@string/hint3"
+        android:hint="Category"
         /><!--android:text="@string/cat2"-->
 
 
@@ -95,8 +96,43 @@
         android:layout_below="@id/category"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:background="@drawable/button_corner"
+        android:background="@drawable/updateforbutton"
         android:onClick="table"
         android:text="@string/btn6" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginTop="800dp"
+        android:background="@color/black">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="10dp"
+            android:onClick="Home"
+            android:src="@drawable/home4" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="30dp"
+            android:onClick="Search"
+            android:src="@drawable/search4"
+            />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="10dp"
+            android:onClick="logout"
+            android:src="@drawable/logout4"
+
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
