--- a/app/src/main/res/drawable/updateforbutton.xml
+++ b/app/src/main/res/drawable/updateforbutton.xml
@@ -4,11 +4,10 @@
 
     android:shape="rectangle">
     <solid
-        android:color="#ffff"
+        android:color="#44c22e"
         />
     <corners
         android:radius="35dp"
         />
-
 
 </shape>
