--- a/app/src/main/res/layout/activity_add_new_delivery_boy.xml
+++ b/app/src/main/res/layout/activity_add_new_delivery_boy.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AddNewDeliveryBoy"
-    android:background="@drawable/background"
+    android:background="@drawable/background13"
     >
 
 <ScrollView
@@ -48,7 +48,8 @@
                 android:hint="@string/txt18"
                 android:inputType="text"
                 android:paddingLeft="20dp"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                />
 
             <EditText
                 android:id="@+id/adtxt3"
@@ -146,5 +147,38 @@
 
 </ScrollView>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginTop="800dp"
+        android:background="@color/black">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="10dp"
+            android:onClick="Home"
+            android:src="@drawable/home4" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="30dp"
+            android:onClick="Home"
+            android:src="@drawable/search4"
+            />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="10dp"
+            android:onClick="logout"
+            android:src="@drawable/logout4"
+
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
