--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -19,9 +19,9 @@
             >
 
 
-
             <RelativeLayout android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
+
 
                 <LinearLayout android:layout_width="match_parent"
                     android:layout_height="230dp"
@@ -327,11 +327,11 @@
                 <Button
                     android:layout_width="150dp"
                     android:layout_height="70dp"
-                    android:layout_marginLeft="200dp"
+                    android:layout_marginLeft="145dp"
                     android:layout_marginTop="800dp"
-                    android:background="@drawable/edit_corner"
-                    android:onClick="Logout"
-                    android:text="@string/logout" />
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/logout4"
+                    android:onClick="Logout" />
 
             </RelativeLayout>
 
