--- a/app/src/main/res/layout/activity_manager_dashboard.xml
+++ b/app/src/main/res/layout/activity_manager_dashboard.xml
@@ -26,7 +26,7 @@
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
-               android:background="#BDBDBB"
+               android:background="#00BDBDBB"
                >
 
                <LinearLayout
@@ -385,11 +385,12 @@
                <Button
                    android:layout_width="150dp"
                    android:layout_height="70dp"
-                   android:layout_marginLeft="200dp"
-                   android:layout_marginTop="800dp"
-                   android:background="@drawable/edit_corner"
+                   android:layout_marginLeft="145dp"
+                   android:layout_marginTop="820dp"
+                   android:layout_marginBottom="20dp"
+                    android:background="@drawable/logout4"
                    android:onClick="Logout"
-                   android:text="@string/logout" />
+                   />
 
 
            </RelativeLayout>
