--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -50,23 +50,23 @@
         android:layout_marginTop="10dp"
         android:hint="@string/hint2"
         />
-    <EditText
-        android:id="@+id/category"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
-        android:background="@drawable/edit_corner"
-        android:paddingLeft="10dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/price"
-        android:layout_marginTop="10dp"
-        android:hint="@string/hint3"
-        />
+<!--    <EditText-->
+<!--        android:id="@+id/category"-->
+<!--        android:layout_width="300dp"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:background="@drawable/edit_corner"-->
+<!--        android:paddingLeft="10dp"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:layout_below="@id/price"-->
+<!--        android:layout_marginTop="10dp"-->
+<!--        android:hint="@string/hint3"-->
+<!--        />-->
 
     <Button
         android:id="@+id/insert"
         android:layout_width="300dp"
         android:layout_height="40dp"
-        android:layout_below="@id/category"
+        android:layout_below="@id/price"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="70dp"
         android:background="@drawable/button_corner"
@@ -74,5 +74,40 @@
         android:text="@string/btn4" />
     <!-- android:textAllCaps="false"-->
 
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_marginTop="800dp"
+        android:background="@color/black">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="10dp"
+            android:onClick="Home"
+            android:src="@drawable/home4" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="30dp"
+            android:onClick="Search"
+            android:src="@drawable/search4"
+            />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="80dp"
+            android:layout_marginRight="10dp"
+            android:onClick="logout"
+            android:src="@drawable/logout4"
+
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
