--- a/app/src/main/res/layout/activity_updata__order.xml
+++ b/app/src/main/res/layout/activity_updata__order.xml
@@ -29,13 +29,15 @@
                 android:layout_marginLeft="5dp"
                 android:text="@string/txtValue1"/>
 
-            <EditText
+            <TextView
                 android:id="@+id/editTextOrderID"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="170dp"
+                android:layout_marginTop="10dp"
                 android:ems="10"
                 android:inputType="textPersonName"
+                android:textSize="18dp"
                 android:hint="Order Id" />
         </RelativeLayout>
 
@@ -69,6 +71,7 @@
             android:id="@+id/relative3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -185,6 +188,38 @@
 
 
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="55dp"
+    android:layout_marginTop="800dp"
+    android:background="@color/black">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="10dp"
+        android:onClick="Home"
+        android:src="@drawable/home4" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="30dp"
+        android:onClick="Home"
+        android:src="@drawable/search4"
+        />
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="10dp"
+        android:onClick="logout"
+        android:src="@drawable/logout4"
+
+        />
+
+</LinearLayout>
 
 </RelativeLayout>
