--- a/app/src/main/res/layout/order_row.xml
+++ b/app/src/main/res/layout/order_row.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="260dp"
         android:orientation="vertical"
-        android:background="#6A006FFF">
+        android:background="#6A006FFF"
+        >
 
 
         <RelativeLayout
@@ -32,13 +33,15 @@
             android:layout_marginLeft="5dp"
             android:text="@string/txtValue1"/>
 
-        <EditText
+        <TextView
             android:id="@+id/editTextOrderID"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="170dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:layout_marginTop="10dp"
+            android:textSize="18dp"
             android:hint="Order Id" />
        </RelativeLayout>
 
@@ -48,7 +51,7 @@
            android:id="@+id/relative2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
-           android:layout_marginBottom="10dp">
+           >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -59,13 +62,14 @@
             android:layout_marginLeft="5dp"
             android:text="@string/txtValue2"/>
 
-        <EditText
+        <TextView
             android:id="@+id/editTextCusNIC"
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:layout_marginLeft="170dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:textSize="18dp"
             android:hint="Nic" />
         </RelativeLayout>
 
@@ -84,13 +88,14 @@
             android:text="@string/txtValue3"/>
 
 
-        <EditText
+        <TextView
             android:id="@+id/editTextCusName"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="170dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:textSize="18dp"
             android:hint="Name" />
 
         </RelativeLayout>
@@ -110,12 +115,12 @@
             android:text="@string/txtValue6"/>
 
 
-        <EditText
+        <TextView
             android:id="@+id/editTextAddress"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="170dp"
-
+            android:textSize="18dp"
             android:ems="10"
             android:inputType="textPersonName"
             android:hint="Address" />
@@ -137,13 +142,14 @@
             android:layout_marginLeft="5dp"
             android:text="@string/txtValue4"/>
 
-        <EditText
+        <TextView
             android:id="@+id/editTextDelID"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="170dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:textSize="18dp"
             android:hint="Delivery Id " />
 
         </RelativeLayout>
@@ -163,13 +169,14 @@
             android:layout_marginLeft="5dp"
             android:text="@string/txtValue5"/>
 
-        <EditText
+        <TextView
             android:id="@+id/editTextStatus"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="170dp"
             android:ems="10"
             android:inputType="textPersonName"
+            android:textSize="18dp"
             android:hint="Ststus " />
 
         </RelativeLayout>
@@ -178,6 +185,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="150dp"
             android:layout_marginTop="10dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/buttonupdate"
             android:onClick="UpdateOrderStatus"
             android:text="@string/btn6"
